storage/pgweb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgweb
  labels:
    goldilocks.fairwinds.com/enabled: "true"
